# mondaybrief

./: README.md
mondaybrief/: .env.example  .gitignore  HANDOFF.md  IMPLEMENTATION_PLAN.md  NYC_README.md  README.md  SIGNALS.md  e2e v1.md  main.py  pyproject.toml  requirements.txt  schema.sql
mondaybrief/emails/: MondayBrief.tsx  package.json
mondaybrief/fixtures/: ek_customers.csv  nyc_sample_permits.json  pritchard_customers.csv  sample_permits.json  spotless_customers.csv
mondaybrief/scripts/: PROVISIONING.md  bootstrap.ps1  bootstrap.sh  gen_secrets.py  run_pipeline.py  seed_clients.py
mondaybrief/src/mondaybrief/: __init__.py  app.py  config.py  db.py  models.py  pipeline.py
mondaybrief/src/mondaybrief/auth/: __init__.py  magic_link.py
mondaybrief/src/mondaybrief/billing/: __init__.py  checkout.py  dunning.py  stripe_client.py  webhooks.py
mondaybrief/src/mondaybrief/dedup/: __init__.py  splink_match.py
mondaybrief/src/mondaybrief/enrich/: __init__.py  drivetime.py  geocode.py  similarity.py  territory.py
mondaybrief/src/mondaybrief/feedback/: __init__.py  api.py  tokens.py
mondaybrief/src/mondaybrief/ingest/: __init__.py  nyc_socrata.py  socrata.py
mondaybrief/src/mondaybrief/inngest/: __init__.py  client.py  server.py
mondaybrief/tests/: test_checkout_security.py  test_delivery.py  test_detectors.py  test_e2e_per_client_offline.py  test_e2e_v1.py  test_engine.py  test_engine_per_client.py  test_flag_parity.py  test_nyc_ingest.py  test_pipeline_idempotency.py  test_pipeline_smoke.py  test_profile.py  test_signal_layer.py
(+30 files in other folders)
