[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mondaybrief"
version = "0.1.0"
description = "Monday-morning lead brief for commercial cleaners"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Matthew Seyoum", email = "matthewseyoum17@gmail.com" }]

[project.scripts]
mondaybrief = "scripts.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
